[Site isolation] PDF links are not recorded as annotations if site-isolation is enabled https://bugs.webkit.org/show_bug.cgi?id=285412# rdar://142399120
Reviewed by Tim Horton.

Is site isolation is enabled, snapshotting the PDFPage has to happen in GPUProcess.
The WebPage links are stored as link annotations in the PDFPage. This happens
through RenderObject::addPDFURLRect() which calls GraphicsContext::setURLForRect().
RecorderImpl and RemoteDisplayListRecorderProxy need to implement setURLForRect.

* Source/WebCore/platform/graphics/displaylists/DisplayListItem.h:
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::SetURLForRect::apply const):
(WebCore::DisplayList::SetURLForRect::dump const):
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:
(WebCore::DisplayList::SetURLForRect::SetURLForRect):
(WebCore::DisplayList::SetURLForRect::link const):
(WebCore::DisplayList::SetURLForRect::destRect const):
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.cpp:
(WebCore::DisplayList::RecorderImpl::setURLForRect):
* Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.h:
* Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.cpp:
(WebKit::RemoteDisplayListRecorder::setURLForRect):
* Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.h:
* Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in:
* Source/WebKit/Shared/DisplayListArgumentCoders.serialization.in:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
(WebKit::RemoteDisplayListRecorderProxy::setURLForRect):
* Source/WebKit/WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h:

Canonical link: https://commits.webkit.org/288470@main

--- a/Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in
+++ b/Source/WebKit/GPUProcess/graphics/RemoteDisplayListRecorder.messages.in
@@ -109,6 +109,7 @@ messages -> RemoteDisplayListRecorder Stream {
 
     BeginPage(WebCore::IntSize pageSize)
     EndPage()
+    SetURLForRect(URL link, WebCore::FloatRect destRect)
 
 #if PLATFORM(COCOA) && ENABLE(VIDEO)
     DrawVideoFrame(struct WebKit::SharedVideoFrame frame, WebCore::FloatRect rect, struct WebCore::ImageOrientation orientation, bool shouldDiscardAlpha) NotStreamEncodable
