--- a/Source/WebKit/Shared/mac/PDFContextMenuItem.serialization.in
+++ b/Source/WebKit/Shared/mac/PDFContextMenuItem.serialization.in
@@ -31,6 +31,7 @@ enum class WebKit::ContextMenuItemIsSeparator : bool;
     String title;
     int state;
     int tag;
+    WebCore::ContextMenuAction action;
     WebKit::ContextMenuItemEnablement enabled;
     WebKit::ContextMenuItemHasAction hasAction;
     WebKit::ContextMenuItemIsSeparator separator;
