--- a/Source/WebKit/Shared/Cocoa/CoreIPCNSCFObject.serialization.in
+++ b/Source/WebKit/Shared/Cocoa/CoreIPCNSCFObject.serialization.in
@@ -28,6 +28,46 @@ webkit_platform_headers: "ArgumentCodersCocoa.h" "CoreIPCNSCFObject.h"
     [Validator='WebKit::CoreIPCNSCFObject::valueIsAllowed(decoder, *value)'] UniqueRef<WebKit::ObjectValue> value();
 }
 
-using WebKit::ObjectValue = std::variant<std::nullptr_t, WebKit::CoreIPCArray, WebKit::CoreIPCCFType, WebKit::CoreIPCColor, WebKit::CoreIPCData, WebKit::CoreIPCDate, WebKit::CoreIPCDictionary, WebKit::CoreIPCError, WebKit::CoreIPCFont, WebKit::CoreIPCLocale, WebKit::CoreIPCNSShadow, WebKit::CoreIPCNSValue, WebKit::CoreIPCNumber, WebKit::CoreIPCNull, WebKit::CoreIPCSecureCoding, WebKit::CoreIPCString, WebKit::CoreIPCURL>
+using WebKit::ObjectValue = std::variant<
+    std::nullptr_t,
+    WebKit::CoreIPCArray,
+    WebKit::CoreIPCCFType,
+    WebKit::CoreIPCColor,
+    WebKit::CoreIPCData,
+    WebKit::CoreIPCDate,
+    WebKit::CoreIPCDictionary,
+    WebKit::CoreIPCError,
+    WebKit::CoreIPCFont,
+    WebKit::CoreIPCLocale,
+    WebKit::CoreIPCNSShadow,
+    WebKit::CoreIPCNSValue,
+    WebKit::CoreIPCNumber,
+    WebKit::CoreIPCNull,
+#if USE(PASSKIT)
+    WebKit::CoreIPCPKPaymentMethod,
+    WebKit::CoreIPCPKPaymentMerchantSession,
+    WebKit::CoreIPCPKContact,
+    WebKit::CoreIPCPKSecureElementPass,
+    WebKit::CoreIPCPKPayment,
+    WebKit::CoreIPCPKPaymentToken,
+    WebKit::CoreIPCPKShippingMethod,
+    WebKit::CoreIPCPKDateComponentsRange,
+    WebKit::CoreIPCCNContact,
+    WebKit::CoreIPCCNPhoneNumber,
+    WebKit::CoreIPCCNPostalAddress,
+#endif
+#if ENABLE(DATA_DETECTION) && HAVE(WK_SECURE_CODING_DATA_DETECTORS)
+    WebKit::CoreIPCDDScannerResult,
+#if PLATFORM(MAC)
+    WebKit::CoreIPCDDSecureActionContext,
+#endif
+#endif
+    WebKit::CoreIPCDateComponents,
+#if !HAVE(WK_SECURE_CODING_NSURLREQUEST)
+    WebKit::CoreIPCSecureCoding,
+#endif
+    WebKit::CoreIPCString,
+    WebKit::CoreIPCURL
+>
 
 #endif // USE(CF)
