--- a/Source/WebKit/Shared/Cocoa/CoreIPCSecureCoding.serialization.in
+++ b/Source/WebKit/Shared/Cocoa/CoreIPCSecureCoding.serialization.in
@@ -20,12 +20,10 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-#if PLATFORM(COCOA)
-
 webkit_platform_headers: "CoreIPCSecureCoding.h"
 
+#if !HAVE(WK_SECURE_CODING_NSURLREQUEST)
 [WebKitPlatform] class WebKit::CoreIPCSecureCoding {
     IPC::CoreIPCRetainPtr<NSObject<NSSecureCoding>> m_secureCoding;
 }
-
-#endif // PLATFORM(COCOA)
+#endif
