WebTransport should send network errors to JS for failure points https://bugs.webkit.org/show_bug.cgi?id=285087 rdar://136263051
Reviewed by Alex Christensen.

Network connections are canceled when the session is terminated.
Streams handle completion and error for reads and writes.
Incoming connections are canceled if the incoming streams reader is closed.

* Source/WebCore/Modules/streams/ReadableStreamSource.h:
* Source/WebCore/Modules/webtransport/DatagramSink.cpp:
(WebCore::DatagramSink::write):
(WebCore::DatagramSink::send):
* Source/WebCore/Modules/webtransport/DatagramSink.h:
* Source/WebCore/Modules/webtransport/DatagramSource.cpp:
(WebCore::DatagramSource::receiveDatagram):
(WebCore::DatagramSource::doCancel):
* Source/WebCore/Modules/webtransport/DatagramSource.h:
* Source/WebCore/Modules/webtransport/WebTransport.cpp:
(WebCore::WebTransport::receiveDatagram):
(WebCore::WebTransport::receiveIncomingUnidirectionalStream):
(WebCore::WebTransport::receiveBidirectionalStream):
* Source/WebCore/Modules/webtransport/WebTransport.h:
* Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamSource.cpp:
(WebCore::WebTransportBidirectionalStreamSource::receiveIncomingStream):
* Source/WebCore/Modules/webtransport/WebTransportBidirectionalStreamSource.h:
* Source/WebCore/Modules/webtransport/WebTransportReceiveStreamSource.cpp:
(WebCore::WebTransportReceiveStreamSource::receiveIncomingStream):
* Source/WebCore/Modules/webtransport/WebTransportReceiveStreamSource.h:
* Source/WebCore/Modules/webtransport/WebTransportSession.h:
* Source/WebCore/Modules/webtransport/WebTransportSessionClient.h:
* Source/WebCore/PAL/pal/cocoa/NetworkSoftLink.h:
* Source/WebCore/PAL/pal/cocoa/NetworkSoftLink.mm:
* Source/WebCore/PAL/pal/spi/cocoa/NetworkSPI.h:
* Source/WebCore/bindings/js/ReadableStreamDefaultController.h:
* Source/WebKit/NetworkProcess/webtransport/NetworkTransportSession.cpp:
(WebKit::NetworkTransportSession::sendDatagram):
(WebKit::NetworkTransportSession::st

--- a/Source/WebKit/NetworkProcess/webtransport/NetworkTransportSession.messages.in
+++ b/Source/WebKit/NetworkProcess/webtransport/NetworkTransportSession.messages.in
@@ -26,12 +26,12 @@
     EnabledBy=WebTransportEnabled
 ]
 messages -> NetworkTransportSession {
-    SendDatagram(std::span<const uint8_t> datagram) -> ()
+    SendDatagram(std::span<const uint8_t> datagram) -> (std::optional<WebCore::Exception> exception)
     CreateOutgoingUnidirectionalStream() -> (std::optional<WebCore::WebTransportStreamIdentifier> identifier)
     CreateBidirectionalStream() -> (std::optional<WebCore::WebTransportStreamIdentifier> identifier)
-    DestroyOutgoingUnidirectionalStream(WebCore::WebTransportStreamIdentifier identifier)
-    DestroyBidirectionalStream(WebCore::WebTransportStreamIdentifier identifier)
-    SendStreamSendBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin) -> ()
-    StreamSendBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin) -> ()
+    StreamSendBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin) -> (std::optional<WebCore::Exception> exception)
+    CancelReceiveStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<uint64_t> errorCode)
+    CancelSendStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<uint64_t> errorCode)
+    DestroyStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<uint64_t> errorCode)
     Terminate(uint32_t code, CString reason)
 }
