--- a/Source/WebKit/WebProcess/WebProcess.messages.in
+++ b/Source/WebKit/WebProcess/WebProcess.messages.in
@@ -226,8 +226,8 @@ messages -> WebProcess : AuxiliaryProcess WantsAsyncDispatchMessage {
     ReleaseMemory() -> ()
 
 #if ENABLE(NOTIFY_BLOCKING)
-    PostNotification(String message, std::optional<uint64_t> state)
-    PostObserverNotification(String message)
+    [DeferSendingIfSuspendedWithCoalescingKeys=(message)] PostNotification(String message, std::optional<uint64_t> state)
+    [DeferSendingIfSuspended] PostObserverNotification(String message)
 #endif
 
 #if ENABLE(CONTENT_EXTENSIONS)
