Sometimes a null port can get sent over to create a SharedMemoryHandle, this asserts on the constructor rdar://139876500 https://bugs.webkit.org/show_bug.cgi?id=285539
Reviewed by Ryosuke Niwa.

This fixes the bug by adding a verification on the decoder for the IPC handle that makes sure it's not a null or invalid handle.

* LayoutTests/http/tests/ipc/null-port-on-sharedmemoryhandle-creation-expected.txt: Added.
* LayoutTests/http/tests/ipc/null-port-on-sharedmemoryhandle-creation.html: Added.
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Tools/Scripts/webkitperl/httpd.pm:
(getDefaultConfigForTestDirectory):

Canonical link: https://commits.webkit.org/288584@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -2623,13 +2623,13 @@ header: <wtf/MachSendRight.h>
 
 [CustomHeader, RValue] class WebCore::SharedMemoryHandle {
 #if USE(UNIX_DOMAIN_SOCKETS)
-    [Validator='!!m_handle'] UnixFileDescriptor m_handle;
+    [Validator='!!m_handle && *m_handle'] UnixFileDescriptor m_handle;
 #endif
 #if OS(DARWIN)
-    [Validator='!!m_handle'] MachSendRight m_handle;
+    [Validator='!!m_handle && *m_handle'] MachSendRight m_handle;
 #endif
 #if OS(WINDOWS)
-    [Validator='!!m_handle'] Win32Handle m_handle;
+    [Validator='!!m_handle && *m_handle'] Win32Handle m_handle;
 #endif
     size_t m_size;
 };
