Add continuous time wrappers https://bugs.webkit.org/show_bug.cgi?id=285564 rdar://142512176
Reviewed by Basuke Suzuki.

It's useful to have a time type which advances while the system is asleep. `MonotonicTime` does not
guarantee this (and definitely doesn't advance while the system is asleep on Darwin). To that end,
this adds two such time types: `ContinuousTime` and `ContinuousApproximateTime`.

- On Darwin, these are wrappers for `mach_continuous_time` and `mach_continuous_approximate_time`.
- On Linux and OpenBSD, both are wrappers for `CLOCK_BOOTTIME`, which advances while the system is
  asleep (there doesn't seem to be an "approximate" faster version of that clock).
- On other systems, these just wrap the wall clock, with some protection against time going
  backwards. This is what we were already doing for `MonotonicTime` on some platforms.

We also change the two call sites where we were using continuous time:

- `SystemTracing` was using `mach_continuous_time` since it's built on top of `os_signpost`, which
  itself expects events in `mach_continuous_time` units. Move this to using `ContinuousTime`.
- `WebPrivacyHelpers` was using `CLOCK_MONOTONIC_RAW_APPROX` (which is just
  `mach_continuous_approximate_time` under the hood). Move this to using
  `ContinuousApproximateTime`.

* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/ClockType.cpp:
(WTF::printInternal):
* Source/WTF/wtf/ClockType.h:
* Source/WTF/wtf/ContinuousApproximateTime.cpp: Copied from Source/WTF/wtf/ClockType.cpp.
(WTF::ContinuousApproximateTime::approximateWallTime const):
(WTF::ContinuousApproximateTime::approximateMonotonicTime const):
(WTF::ContinuousApproximateTime::dump const):
* Source/WTF/wtf/ContinuousApproximateTime.h: Added.
(WTF::ContinuousApproximateTime::MarkableTraits::isEmptyValue):
(WTF::ContinuousApproximateTime::MarkableTraits::emptyValue):
* Source/WTF/wtf/ContinuousTime.cpp: Copied from Source/WTF/wtf/ClockType.cpp.
(WTF::Con

--- a/Source/WTF/wtf/CMakeLists.txt
+++ b/Source/WTF/wtf/CMakeLists.txt
@@ -56,6 +56,8 @@ set(WTF_PUBLIC_HEADERS
     ConcurrentPtrHashSet.h
     ConcurrentVector.h
     Condition.h
+    ContinuousApproximateTime.h
+    ContinuousTime.h
     CountingLock.h
     CrossThreadCopier.h
     CrossThreadQueue.h
@@ -506,6 +508,8 @@ set(WTF_SOURCES
     CompilationThread.cpp
     ConcurrentBuffer.cpp
     ConcurrentPtrHashSet.cpp
+    ContinuousApproximateTime.cpp
+    ContinuousTime.cpp
     CountingLock.cpp
     CrossThreadCopier.cpp
     CrossThreadTaskHandler.cpp
