Annotate VideoPresentationManagerProxy endpoints with feature flag https://bugs.webkit.org/show_bug.cgi?id=283916 rdar://140798582
Reviewed by Andy Estes.

Annotate VideoPresentationManagerProxy endpoints with feature flag

* Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.messages.in:

Canonical link: https://commits.webkit.org/288653@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8129,7 +8129,22 @@ VideoFullscreenRequiresElementFullscreen:
     WebCore:
       default: false
   sharedPreferenceForWebProcess: true
-
+      
+VideoPresentationManagerEnabled:
+  type: bool
+  status: embedder
+  defaultValue:
+    WebKitLegacy:
+      "PLATFORM(VISION)" : true
+      default: false
+    WebKit:
+      "PLATFORM(VISION)" : true
+      default: false
+    WebCore:
+      "PLATFORM(VISION)" : true
+      default: false
+  sharedPreferenceForWebProcess: true
+  
 VideoPresentationModeAPIEnabled:
   type: bool
   status: embedder
