Digital Credential: DigitalCredentialsRequest's request member is now called data https://bugs.webkit.org/show_bug.cgi?id=279933 rdar://136714291
Reviewed by Abrar Rahman Protyasha and Alex Christensen.

The `request` member of IdentityRequestProvider is now called data.

Spec change:
https://github.com/WICG/digital-credentials/pull/165

* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/dc-types.ts:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/support/helper.js:
(makeIdentityRequestProvider):
* Source/WebCore/Modules/identity/IdentityRequestProvider.h:
* Source/WebCore/Modules/identity/IdentityRequestProvider.idl:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/288669@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6377,7 +6377,7 @@ struct WebCore::OpenID4VPRequest {
 
 [Nested] struct WebCore::IdentityRequestProvider {
     WebCore::IdentityCredentialProtocol protocol;
-    WebCore::OpenID4VPRequest request;
+    WebCore::OpenID4VPRequest data;
 };
 
 struct WebCore::DigitalCredentialRequestOptions {
