[JSC][GLib] Provide deferred promise creation api https://bugs.webkit.org/show_bug.cgi?id=283708
Reviewed by Carlos Garcia Campos.

This commit implements an API to create promises in JSC GLib.
It is a copy from the Objective-C valueWithNewPromiseInContext.
An executor is required, it will be invoked during promise initialization
and it receives the @resolve and @reject objects than can be called to resolve
or reject the promise. It is called like a js function, so exceptions raised
during the executor invocation will not be propagated to the context, but
handled by the promise causing a rejection.

* Source/JavaScriptCore/API/glib/JSCValue.cpp:
(jsc_value_new_promise):
* Source/JavaScriptCore/API/glib/JSCValue.h.in:
* Tools/TestWebKitAPI/Tests/JavaScriptCore/glib/TestJSC.cpp:
(fooSuccessSource):
(fooSuccessExecutor):
(getAsyncResolvedPromise):
(fooFailureSource):
(fooFailureExecutor):
(getAsyncRejectedPromise):
(getRejectedPromise):
(getExceptionPromise):
(getResolvedPromise):
(testJSCPromises):

Canonical link: https://commits.webkit.org/288688@main

--- a/Source/JavaScriptCore/API/glib/JSCValue.h.in
+++ b/Source/JavaScriptCore/API/glib/JSCValue.h.in
@@ -322,6 +322,15 @@ JSC_API char *
 jsc_value_to_json                         (JSCValue             *value,
                                            guint                 indent);
 
+typedef void  (*JSCExecutor)              (JSCValue             *resolve,
+                                           JSCValue             *reject,
+                                           gpointer              user_data);
+
+JSC_API JSCValue *
+jsc_value_new_promise                     (JSCContext           *context,
+                                           JSCExecutor           executor,
+                                           gpointer              user_data);
+
 G_END_DECLS
 
 #endif /* JSCValue_h */
