--- a/Source/WebKit/WebProcess/WebProcess.messages.in
+++ b/Source/WebKit/WebProcess/WebProcess.messages.in
@@ -58,6 +58,9 @@ messages -> WebProcess : AuxiliaryProcess WantsAsyncDispatchMessage {
     UserPreferredLanguagesChanged(Vector<String> languages)
     FullKeyboardAccessModeChanged(bool fullKeyboardAccessEnabled)
     UpdateStorageAccessUserAgentStringQuirks(HashMap<WebCore::RegistrableDomain, String> userAgentStringQuirks)
+#if HAVE(ALLOW_ONLY_PARTITIONED_COOKIES)
+    SetOptInCookiePartitioningEnabled(bool enabled);
+#endif
 
 #if HAVE(MOUSE_DEVICE_OBSERVATION)
     SetHasMouseDevice(bool hasMouseDevice)
