--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -3672,7 +3672,7 @@ enum class WebCore::FetchHeadersGuard : uint8_t {
     Presenting,
     FormSemanticContext,
     DarkAppearance,
-    RightToLeft,
+    InlineFlippedWritingMode,
     LargeControls,
     ReadOnly,
     ListButton,
