Implement CSS Values 5 random() https://bugs.webkit.org/show_bug.cgi?id=284344
Reviewed by Darin Adler.

Implements CSS Values 5 random() math function behind a
new feature flag, CSSRandomFunctionEnabled.

random() requires maintaining state on a per-document basis for
random values based on a "random cache key" derived from the
parameters to random(). Due to the layering of the Calculation
tree in platform, the mapping was divided into two parts: a
per-element/document wide mapping and then a mapping for the
remaining bits (optional identifier, min, max, optional step).

A conservative approach was take to disable style sharing as
necessary for per-element unique values where we use the
existence of any random key map on an element as indicator
that the element's style should not be shared. This is checked
in MatchedDeclarationsCache and SharingResolver.

* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-computed.tentative-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-computed.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-invalid.tentative-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-invalid.tentative.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-serialize.tentative-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/random-serialize.tentative.html: Added.
    - Add new tests.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
    - Add feature flag.
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/Headers.cmake:
    - Add new files.
* Source/WebCore/css/CSSValueKeywords.in:
    - Add new keywords.
* Source/WebCore/css/calc/CSSCalcTree+CalculationValue.cpp:
* Source/WebCore/css/calc/CSSCalcTree+Copy.cpp:
* Source/WebCore/css/calc/CSSCalcTree+Evaluation.cpp:
* Source/WebCore/css/calc/CSSCalcTree+Parser.cpp:
* Source/WebCore/c

--- a/Source/WebCore/css/CSSValueKeywords.in
+++ b/Source/WebCore/css/CSSValueKeywords.in
@@ -1521,6 +1521,9 @@ to-zero
 // progress
 media-progress
 container-progress
+random
+per-element
+// by
 infinity
 -infinity id=NegativeInfinity
 NaN
