Add a way for LocalOverrides.xcconfig to disable all VerifyModule/TAPI checks https://bugs.webkit.org/show_bug.cgi?id=285830 rdar://142800798
Reviewed by Elliott Williams and Wenson Hsieh.

This lets LocalOverrides.xcconfig disable all remaining VerifyModule/TAPI checks, similar to the change
done for JSC in 284179@main.

This makes my local incremental build ~45 seconds faster.

* Source/WebCore/Configurations/WebCore.xcconfig:
* Source/WebGPU/Configurations/WebGPU.xcconfig:
* Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig:
* Source/WebKit/Configurations/Base.xcconfig:
* Source/WebKit/Configurations/WebKit.xcconfig:
* Source/WebKit/SwiftOverlay/Configurations/WebKitSwiftOverlay.xcconfig:
* Source/WebKitLegacy/mac/Configurations/WebKitLegacy.xcconfig:

Canonical link: https://commits.webkit.org/288819@main

--- a/Source/WebCore/Configurations/WebCore.xcconfig
+++ b/Source/WebCore/Configurations/WebCore.xcconfig
@@ -205,8 +205,11 @@ OTHER_LDFLAGS_SHARED_CACHE = $(OTHER_LDFLAGS_SHARED_CACHE_$(ALLOW_SHARED_CACHE))
 OTHER_LDFLAGS_SHARED_CACHE_NO = -Wl,-not_for_dyld_shared_cache;
 
 // Enable InstallAPI support, when built with WEBCORE_ENABLE_INSTALLAPI=YES.
-SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(TARGET_NAME))
+SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(OVERRIDE_SUPPORTS_TEXT_BASED_API));
+SUPPORTS_TEXT_BASED_API_ = $(SUPPORTS_TEXT_BASED_API_$(TARGET_NAME));
 SUPPORTS_TEXT_BASED_API_WebCore = $(WEBCORE_ENABLE_INSTALLAPI)
+SUPPORTS_TEXT_BASED_API_NO = NO;
+SUPPORTS_TEXT_BASED_API_YES = YES;
 TEXT_BASED_API_FILE = WebCore.tbd
 
 WK_HAVE_URL_FORMATTING = $(WK_HAVE_URL_FORMATTING_$(WK_PLATFORM_NAME));
