--- a/Source/WebGPU/Configurations/WebGPU.xcconfig
+++ b/Source/WebGPU/Configurations/WebGPU.xcconfig
@@ -66,7 +66,10 @@ GCC_PREPROCESSOR_DEFINITIONS_OS_UNFAIR_LOCK_INLINE_ENABLE_WEBGPU_SWIFT = OS_UNFA
 DEFINES_MODULE = YES;
 MODULEMAP_FILE = WebGPU/WebGPU.modulemap;
 
-SUPPORTS_TEXT_BASED_API = YES;
+SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(OVERRIDE_SUPPORTS_TEXT_BASED_API));
+SUPPORTS_TEXT_BASED_API_ = YES;
+SUPPORTS_TEXT_BASED_API_NO = NO;
+SUPPORTS_TEXT_BASED_API_YES = YES;
 TAPI_USE_SRCROOT = $(TAPI_USE_SRCROOT$(WK_XCODE_15));
 TAPI_USE_SRCROOT_XCODE_SINCE_15 = YES;
 TAPI_VERIFY_MODE = Pedantic;
