--- a/Source/WebKit/Configurations/Base.xcconfig
+++ b/Source/WebKit/Configurations/Base.xcconfig
@@ -126,8 +126,11 @@ OTHER_SWIFT_FLAGS_XCODE_BEFORE_16 = -Xfrontend -enable-experimental-concurrency 
 
 OTHER_CPLUSPLUSFLAGS = $(inherited) -isystem $(SDKROOT)/System/Library/Frameworks/System.framework/PrivateHeaders;
 
-SUPPORTS_TEXT_BASED_API = $(TAPI_USE_SRCROOT);
-SUPPORTS_TEXT_BASED_API[sdk=iphone*] = YES;
+SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(OVERRIDE_SUPPORTS_TEXT_BASED_API));
+SUPPORTS_TEXT_BASED_API_ = $(TAPI_USE_SRCROOT);
+SUPPORTS_TEXT_BASED_API_[sdk=iphone*] = YES;
+SUPPORTS_TEXT_BASED_API_NO = NO;
+SUPPORTS_TEXT_BASED_API_YES = YES;
 
 OTHER_TAPI_FLAGS = $(inherited) -DRELEASE_WITHOUT_OPTIMIZATIONS;
 TAPI_USE_SRCROOT = $(TAPI_USE_SRCROOT$(WK_XCODE_15));
