--- a/Source/WebKit/SwiftOverlay/Configurations/WebKitSwiftOverlay.xcconfig
+++ b/Source/WebKit/SwiftOverlay/Configurations/WebKitSwiftOverlay.xcconfig
@@ -31,7 +31,10 @@ OTHER_LDFLAGS = $(inherited) -weak_framework WebKit;
 PRODUCT_NAME = WebKit;
 STRIP_SWIFT_SYMBOLS = NO;
 SUPPORTED_PLATFORMS = iphoneos iphonesimulator macosx appletvos appletvsimulator watchos watchsimulator xros xrsimulator;
-SUPPORTS_TEXT_BASED_API = YES;
+SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(OVERRIDE_SUPPORTS_TEXT_BASED_API));
+SUPPORTS_TEXT_BASED_API_ = YES;
+SUPPORTS_TEXT_BASED_API_NO = NO;
+SUPPORTS_TEXT_BASED_API_YES = YES;
 SWIFT_IS_OVERLAY = YES;
 SWIFT_LINK_OBJC_RUNTIME = NO;
 SWIFT_OVERLAY_INSTALL_PATH=/usr/lib/swift;
