--- a/Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig
+++ b/Source/WebInspectorUI/Configurations/WebInspectorUIFramework.xcconfig
@@ -29,7 +29,10 @@ GCC_DYNAMIC_NO_PIC = NO;
 GCC_PRECOMPILE_PREFIX_HEADER = YES;
 GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) $(inherited) FRAMEWORK_NAME=WebInspectorUI;
 
-SUPPORTS_TEXT_BASED_API = YES;
+SUPPORTS_TEXT_BASED_API = $(SUPPORTS_TEXT_BASED_API_$(OVERRIDE_SUPPORTS_TEXT_BASED_API));
+SUPPORTS_TEXT_BASED_API_ = YES;
+SUPPORTS_TEXT_BASED_API_NO = NO;
+SUPPORTS_TEXT_BASED_API_YES = YES;
 TAPI_USE_SRCROOT = $(TAPI_USE_SRCROOT$(WK_XCODE_15));
 TAPI_USE_SRCROOT_XCODE_SINCE_15 = YES;
 
