--- a/Source/WebKit/Configurations/WebKit.xcconfig
+++ b/Source/WebKit/Configurations/WebKit.xcconfig
@@ -32,7 +32,10 @@ PRODUCT_BUNDLE_IDENTIFIER = com.apple.$(PRODUCT_NAME:rfc1034identifier);
 INFOPLIST_FILE = Info.plist;
 
 DEFINES_MODULE = YES;
-ENABLE_MODULE_VERIFIER = $(USE_INTERNAL_SDK);
+ENABLE_MODULE_VERIFIER = $(ENABLE_MODULE_VERIFIER_$(OVERRIDE_ENABLE_MODULE_VERIFIER));
+ENABLE_MODULE_VERIFIER_ = $(USE_INTERNAL_SDK);
+ENABLE_MODULE_VERIFIER_NO = NO;
+ENABLE_MODULE_VERIFIER_YES = YES;
 OTHER_MODULE_VERIFIER_FLAGS = $(OTHER_MODULE_VERIFIER_FLAGS_$(WK_EMPTY_$(WK_OVERRIDE_FRAMEWORKS_DIR)));
 OTHER_MODULE_VERIFIER_FLAGS_ = -- -iframework $(WK_PRIVATE_SDK_DIR)$(WK_OVERRIDE_FRAMEWORKS_DIR) -isystem $(WK_PRIVATE_SDK_DIR)$(WK_ALTERNATE_WEBKIT_SDK_PATH)$(WK_LIBRARY_HEADERS_FOLDER_PATH);
 
