Unreviewed, reverting 288915@main. https://bugs.webkit.org/show_bug.cgi?id=285975
Broke internal build

Reverted changeset:

"Support <link rel=dns-prefetch>; clean up DNS prefetching code"
https://bugs.webkit.org/show_bug.cgi?id=285744
https://commits.webkit.org/288915@main

Canonical link: https://commits.webkit.org/288920@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -2300,6 +2300,18 @@ CustomPasteboardDataEnabled:
       "PLATFORM(COCOA) || PLATFORM(GTK) || PLATFORM(WIN)": true
       default: false
 
+DNSPrefetchingEnabled:
+  type: bool
+  status: embedder
+  webcoreOnChange: dnsPrefetchingEnabledChanged
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+
 DOMAudioSessionEnabled:
   type: bool
   status: mature
@@ -4299,20 +4311,6 @@ LinearMediaPlayerEnabled:
       default: WebKit::defaultLinearMediaPlayerEnabled()
     WebCore:
       default: false
-
-LinkDNSPrefetchEnabled:
-  type: bool
-  status: stable
-  category: networking
-  humanReadableName: "<link rel=dns-prefetch>"
-  humanReadableDescription: "Enable <link rel=dns-prefetch>"
-  defaultValue:
-    WebKitLegacy:
-      default: true
-    WebKit:
-      default: true
-    WebCore:
-      default: true
 
 LinkPreconnect:
   type: bool
