Remove non-standard browser.test.yield now that browser.test.sendMessage is supported. https://webkit.org/b/286151 rdar://problem/143138300
Reviewed by Brian Weinstein.

Change all test to use `browser.test.sendMessage()` and `runUntilTestMessage:` and removed
support for `browser.test.yield()` and `yieldMessage`.

Removed duplicate code that created the extension and manager with two additional helper
functions to simplify each test.

* Source/WebKit/UIProcess/API/Cocoa/WKWebExtensionControllerDelegatePrivate.h:
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionControllerAPITestCocoa.mm:
(WebKit::WebExtensionController::testLogMessage):
(WebKit::WebExtensionController::testMessage): Deleted.
(WebKit::WebExtensionController::testYielded): Deleted.
* Source/WebKit/UIProcess/Extensions/WebExtensionController.h:
* Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in:
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPITestCocoa.mm:
(WebKit::WebExtensionAPITest::log):
(WebKit::WebExtensionAPITest::yield): Deleted.
* Source/WebKit/WebProcess/Extensions/API/WebExtensionAPITest.h:
* Source/WebKit/WebProcess/Extensions/Interfaces/WebExtensionAPITest.idl:
* Tools/TestWebKitAPI/Tests/WebKit/web-extension-with-parent-directory.zip:
* Tools/TestWebKitAPI/Tests/WebKit/web-extension-without-parent-directory.zip:
* Tools/TestWebKitAPI/Tests/WebKit/web-extension.crx:
* Tools/TestWebKitAPI/Tests/WebKit/web-extension/background.js:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtension.mm:
(TestWebKitAPI::TEST(WKWebExtension, LoadFromDirectory)):
(TestWebKitAPI::TEST(WKWebExtension, LoadFromZipArchiveWithoutParentDirectory)):
(TestWebKitAPI::TEST(WKWebExtension, LoadFromZipArchiveWithParentDirectory)):
(TestWebKitAPI::TEST(WKWebExtension, LoadFromChromeExtensionArchive)):
(TestWebKitAPI::TEST(WKWebExtension, LoadFromMacAppExtensionBundle)):
(TestWebKitAPI::TEST(WKWebExtension, LoadFromiOSAppExtensionBundle)):
* Tools/TestWebKitAPI/Tests/WebKitCoco

--- a/Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in
+++ b/Source/WebKit/UIProcess/Extensions/WebExtensionController.messages.in
@@ -39,8 +39,7 @@ messages -> WebExtensionController {
     // Test APIs
     [Validator=inTestingMode] TestResult(bool result, String message, String sourceURL, unsigned lineNumber)
     [Validator=inTestingMode] TestEqual(bool result, String expected, String actual, String message, String sourceURL, unsigned lineNumber)
-    [Validator=inTestingMode] TestMessage(String message, String sourceURL, unsigned lineNumber)
-    [Validator=inTestingMode] TestYielded(String message, String sourceURL, unsigned lineNumber)
+    [Validator=inTestingMode] TestLogMessage(String message, String sourceURL, unsigned lineNumber)
     [Validator=inTestingMode] TestSentMessage(String message, String argument, String sourceURL, unsigned lineNumber)
     [Validator=inTestingMode] TestFinished(bool result, String message, String sourceURL, unsigned lineNumber)
 }
