Ensure OS_UNFAIR_LOCK_INLINE=1 is defined throughout the WebKit project. https://bugs.webkit.org/show_bug.cgi?id=286268 rdar://133813123
Reviewed by Yusuke Suzuki.

Apple port's libpas relies on this being consistently defined.
Now, we can remove the workarounds in ARKitSPI.h and WebGPU.xcconfig.

* Configurations/CommonBase.xcconfig:
* Source/ThirdParty/ANGLE/Configurations/BaseTarget.xcconfig:
* Source/WebCore/PAL/pal/spi/cocoa/ARKitSPI.h:
* Source/WebGPU/Configurations/Base.xcconfig:
* Source/WebGPU/Configurations/WebGPU.xcconfig:
* Source/bmalloc/libpas/src/libpas/pas_lock.h:
* Tools/DumpRenderTree/mac/Configurations/Base.xcconfig:
* Tools/TestWebKitAPI/Configurations/Base.xcconfig:
* Tools/WebKitTestRunner/Configurations/Base.xcconfig:

Canonical link: https://commits.webkit.org/289181@main

--- a/Source/WebGPU/Configurations/WebGPU.xcconfig
+++ b/Source/WebGPU/Configurations/WebGPU.xcconfig
@@ -1,4 +1,4 @@
-// Copyright (C) 2009-2023 Apple Inc. All rights reserved.
+// Copyright (C) 2009-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -57,11 +57,8 @@ WEBGPU_FRAMEWORKS_DIR_USE_OVERRIDE_FRAMEWORKS_DIR_YES = $(WK_OVERRIDE_FRAMEWORKS
 WEBGPU_FRAMEWORKS_DIR_USE_ALTERNATE_FRAMEWORKS_DIR_NO = $(NORMAL_WEBGPU_FRAMEWORKS_DIR);
 WEBGPU_FRAMEWORKS_DIR_USE_ALTERNATE_FRAMEWORKS_DIR_YES = $(WK_ALTERNATE_FRAMEWORKS_DIR)/$(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
 
-GCC_PREPROCESSOR_DEFINITIONS = WGPU_SHARED_LIBRARY WGPU_IMPLEMENTATION $(inherited) $(GCC_PREPROCESSOR_DEFINITIONS_$(ENABLE_WEBGPU_SWIFT)) $(GCC_PREPROCESSOR_DEFINITIONS_OS_UNFAIR_LOCK_INLINE_$(ENABLE_WEBGPU_SWIFT)) __WEBGPU__;
+GCC_PREPROCESSOR_DEFINITIONS = WGPU_SHARED_LIBRARY WGPU_IMPLEMENTATION $(inherited) $(GCC_PREPROCESSOR_DEFINITIONS_$(ENABLE_WEBGPU_SWIFT)) __WEBGPU__;
 GCC_PREPROCESSOR_DEFINITIONS_ENABLE_WEBGPU_SWIFT = ENABLE_WEBGPU_SWIFT;
-// Module imports need command line config macros. So although this is set in pas_lock.h
-// It still needs to be set here for Swift build which uses module imports.
-GCC_PREPROCESSOR_DEFINITIONS_OS_UNFAIR_LOCK_INLINE_ENABLE_WEBGPU_SWIFT = OS_UNFAIR_LOCK_INLINE=1;
 
 DEFINES_MODULE = YES;
 MODULEMAP_FILE = WebGPU/WebGPU.modulemap;
