--- a/Source/WebGPU/Configurations/Base.xcconfig
+++ b/Source/WebGPU/Configurations/Base.xcconfig
@@ -1,4 +1,4 @@
-// Copyright (C) 2009-2024 Apple Inc. All rights reserved.
+// Copyright (C) 2009-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -103,7 +103,7 @@ DEAD_CODE_STRIPPING[config=Debug] = NO;
 DEBUG_DEFINES = NDEBUG;
 DEBUG_DEFINES[config=Debug] = $(WK_ENABLE_CONJECTURE_ASSERT_YES);
 
-GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) METALCPP_SYMBOL_VISIBILITY_HIDDEN;
+GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) $(WK_OS_UNFAIR_LOCK_INLINE_CFLAGS) METALCPP_SYMBOL_VISIBILITY_HIDDEN;
 
 WK_DEFAULT_GCC_OPTIMIZATION_LEVEL = 3;
 WK_DEFAULT_GCC_OPTIMIZATION_LEVEL[config=Debug] = 0;
