--- a/Tools/WebKitTestRunner/Configurations/Base.xcconfig
+++ b/Tools/WebKitTestRunner/Configurations/Base.xcconfig
@@ -1,4 +1,4 @@
-// Copyright (C) 2010-2024 Apple Inc. All rights reserved.
+// Copyright (C) 2010-2025 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -49,7 +49,7 @@ CLANG_WARN_RANGE_LOOP_ANALYSIS = YES;
 CLANG_WARN_SUSPICIOUS_MOVE = YES;
 CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES;
 GCC_NO_COMMON_BLOCKS = YES;
-GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) U_DISABLE_RENAMING=1 U_SHOW_CPLUSPLUS_API=0;
+GCC_PREPROCESSOR_DEFINITIONS = $(DEBUG_DEFINES) $(WK_OS_UNFAIR_LOCK_INLINE_CFLAGS) U_DISABLE_RENAMING=1 U_SHOW_CPLUSPLUS_API=0;
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym;
 ENABLE_BITCODE = NO;
 PREBINDING = NO
