Revert the removal of support for "overflowchanged" events https://bugs.webkit.org/show_bug.cgi?id=286495 rdar://143585956
Unreviewed revert of 281672@main, which removed support for the "overflowchanged"
event. It turns out that some websites use it.

I had to fix up WTF_MAKE_TZONE_OR_ISO_ALLOCATED usage, and a unified sources issue
after reverting.

* LayoutTests/fast/dom/Window/resources/window-properties.js:
* LayoutTests/fast/dom/Window/window-lookup-precedence-expected.txt:
* LayoutTests/fast/dom/wrapper-classes-expected.txt:
* LayoutTests/fast/dom/wrapper-classes.html:
* LayoutTests/fast/dynamic/paused-event-dispatch-expected.txt: Added.
* LayoutTests/fast/dynamic/paused-event-dispatch.html: Added.
* LayoutTests/fast/dynamic/resources/paused-event-dispatch-iframe.html: Added.
* LayoutTests/fast/events/change-overflow-on-overflow-change-expected.txt: Added.
* LayoutTests/fast/events/change-overflow-on-overflow-change.html: Added.
* LayoutTests/fast/events/constructors/overflow-event-constructor-expected.txt: Added.
* LayoutTests/fast/events/constructors/overflow-event-constructor.html: Added.
* LayoutTests/fast/events/event-creation-expected.txt:
* LayoutTests/fast/events/event-creation.html:
* LayoutTests/fast/events/overflow-events-expected.txt: Added.
* LayoutTests/fast/events/overflow-events-writing-mode-expected.txt: Added.
* LayoutTests/fast/events/overflow-events-writing-mode.html: Added.
* LayoutTests/fast/events/overflow-events.html: Added.
* LayoutTests/fast/events/overflow-viewport-renderer-deleted.html: Added.
* LayoutTests/fast/events/overflowchanged-inside-selection-collapse-crash-expected.txt: Added.
* LayoutTests/fast/events/overflowchanged-inside-selection-collapse-crash.html: Added.
* LayoutTests/fast/overflow/horizontal-overflow-with-offset-expected.txt: Added.
* LayoutTests/fast/overflow/horizontal-overflow-with-offset.html: Added.
* LayoutTests/fast/overflow/vertical-overflow-with-offset-expected.txt: Added.
* LayoutTests/fast/overflow/ver

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -1176,6 +1176,7 @@ set(WebCore_NON_SVG_IDL_FILES
     dom/Observable.idl
     dom/ObservableInspector.idl
     dom/ObservableInspectorAbortCallback.idl
+    dom/OverflowEvent.idl
     dom/PageRevealEvent.idl
     dom/PageSwapEvent.idl
     dom/PageTransitionEvent.idl
