--- a/Source/WebCore/dom/EventInterfaces.in
+++ b/Source/WebCore/dom/EventInterfaces.in
@@ -40,6 +40,7 @@ MutationEvent
 MutationEvents interfaceName=MutationEvent
 NavigateEvent
 NavigationCurrentEntryChangeEvent
+OverflowEvent
 PageRevealEvent
 PageSwapEvent
 PageTransitionEvent
