[WebGPU] Add missing features which would break sites adapting compat mode https://bugs.webkit.org/show_bug.cgi?id=284110 rdar://140978614
Reviewed by Tadeu Zagallo.

We need to add support for features which are always supported on our
devices, otherwise a site which tries to request a feature will fail in
WebKit due to the feature being not reported as supported, despite our
implementation supporting it.

* Source/WebCore/Modules/WebGPU/GPUAdapter.cpp:
(WebCore::convertFeatureNameToEnum):
* Source/WebCore/Modules/WebGPU/GPUFeatureName.h:
(WebCore::convertToBacking):
* Source/WebCore/Modules/WebGPU/GPUFeatureName.idl:
* Source/WebCore/Modules/WebGPU/GPUSupportedLimits.cpp:
(WebCore::GPUSupportedLimits::maxStorageBuffersInFragmentStage const):
(WebCore::GPUSupportedLimits::maxStorageTexturesInFragmentStage const):
* Source/WebCore/Modules/WebGPU/GPUSupportedLimits.h:
* Source/WebCore/Modules/WebGPU/GPUSupportedLimits.idl:
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUAdapterImpl.cpp:
(WebCore::WebGPU::supportedFeatures):
(WebCore::WebGPU::supportedLimits):
(WebCore::WebGPU::AdapterImpl::requestDevice):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUConvertToBackingContext.cpp:
(WebCore::WebGPU::ConvertToBackingContext::convertToBacking):
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUFeatureName.h:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUSupportedLimits.h:
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseFeatures):
(WebGPU::apple4):
(WebGPU::apple5):
(WebGPU::apple6):
(WebGPU::apple7):
(WebGPU::mac2):
(WebGPU::mergeLimits):
(WebGPU::anyLimitIsBetterThan):
(WebGPU::defaultLimits):
* Source/WebGPU/WebGPU/PipelineLayout.h:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::buildFeatureSet):
(wgpuAdapterFeatureName):
* Source/WebGPU/WebGPU/WebGPU.h:
* Source/WebGPU/WebGPU/WebGPUExt.h:
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteAdapter.cpp:
(WebKit::RemoteAdapter::requestDevice):
* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteG

--- a/Source/WebKit/Shared/WebGPU/WebGPUFeatureName.serialization.in
+++ b/Source/WebKit/Shared/WebGPU/WebGPUFeatureName.serialization.in
@@ -25,13 +25,20 @@ enum class WebCore::WebGPU::FeatureName : uint8_t {
     DepthClipControl,
     Depth32floatStencil8,
     TextureCompressionBc,
+    TextureCompressionBcSliced3d,
     TextureCompressionEtc2,
     TextureCompressionAstc,
+    TextureCompressionAstcSliced3d,
     TimestampQuery,
     IndirectFirstInstance,
     ShaderF16,
     Rg11b10ufloatRenderable,
     Bgra8unormStorage,
     Float32Filterable,
+    Float32Blendable,
+    ClipDistances,
+    DualSourceBlending,
+    Float16Renderable,
+    Float32Renderable,
 };
 #endif
