[visionOS] Move shared simulation connection from the Model process to the GPU process https://bugs.webkit.org/show_bug.cgi?id=286366 rdar://138447079
Reviewed by Per Arne Vollan.

Instead of connecting to shared simulation as part of WKREEngine initialization
in the Model process, the Model process will send a message to the UI process to
request for that connection. UI process delegates that request to the GPU process
and returns the resulting connection back to the Model process. Sandbox rules and
entitlements related to the shared simulation connection have been removed from
the Model process, and added to the GPU process instead (only for visionOS).

* Source/WebKit/Configurations/GPUService.xcconfig:
Update the GPU process simulator entitlements for visionOS
* Source/WebKit/GPUProcess/GPUProcess.h:
* Source/WebKit/GPUProcess/GPUProcess.messages.in:
Add a new message for handling shared simulation connection
* Source/WebKit/GPUProcess/cocoa/GPUProcessCocoa.mm:
(WebKit::GPUProcess::requestSharedSimulationConnection):
Get the shared simulation connection via WKSharedSimulationConnectionHelper using
the model process' audit token.
* Source/WebKit/ModelProcess/ModelProcess.cpp:
(WebKit::ModelProcess::createModelConnectionToWebProcess):
Initialize the WKREEngine with a function to get the shared simulation
connection via a message to the UI process.
(WebKit::ModelProcess::requestSharedSimulationConnection):
* Source/WebKit/ModelProcess/ModelProcess.h:
* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in:
A couple of additions to the GPU process sandbox in order to connect to shared
simulation and to make shareable file handles.
* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in:
Remove the mach-lookup rule needed to connect to shared simulation.
* Source/WebKit/Resources/ios/GPUService-visionOS-simulator.entitlements: Copied from Source/WebKit/Resources/ios/ModelService-embedded-simulator.entitlements.
* Source/WebKit/Reso

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
@@ -772,6 +772,9 @@
         SYS_fcntl
         SYS_fcntl_nocancel
         SYS_fileport_makefd
+#if PLATFORM(VISION) && ENABLE(MODEL_PROCESS)
+        SYS_fileport_makeport
+#endif
         SYS_flock
         SYS_fsetattrlist
         SYS_fsetxattr
@@ -989,6 +992,11 @@
     (require-all
         (extension-class "com.apple.mediaserverd.read")
         (apply subpath issue-extension-secondary-paths)))
+#endif
+
+#if PLATFORM(VISION) && ENABLE(MODEL_PROCESS)
+(allow mach-lookup
+    (global-name "com.apple.surfboard.applicationservice"))
 #endif
 
 #if __has_include(<WebKitAdditions/com.apple.WebKit.GPU.sb.in>)
