--- a/Source/WebKit/UIProcess/Model/ModelProcessProxy.messages.in
+++ b/Source/WebKit/UIProcess/Model/ModelProcessProxy.messages.in
@@ -32,6 +32,10 @@ messages -> ModelProcessProxy {
 #endif
 
     ProcessIsReadyToExit()
+
+#if PLATFORM(VISION) && ENABLE(GPU_PROCESS)
+    RequestSharedSimulationConnection(WebCore::ProcessIdentifier webProcessIdentifier) -> (std::optional<IPC::SharedFileHandle> sharedSimulationConnection)
+#endif
 }
 
 #endif // ENABLE(MODEL_PROCESS)
