--- a/Source/WebKit/Configurations/GPUService.xcconfig
+++ b/Source/WebKit/Configurations/GPUService.xcconfig
@@ -40,6 +40,8 @@ INFOPLIST_FILE[sdk=macosx*] = GPUProcess/EntryPoint/Cocoa/XPCService/GPUService/
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING = NO; // Disable PGO profile generation
 OTHER_LDFLAGS = $(inherited) $(OTHER_LDFLAGS_STAGED_FRAMEWORK_PATH) $(WK_RELOCATABLE_FRAMEWORKS_LDFLAGS) $(SOURCE_VERSION_LDFLAGS) $(PROFILE_GENERATE_OR_USE_LDFLAGS);
 
+CODE_SIGN_ENTITLEMENTS[sdk=xrsimulator*] = Resources/ios/GPUService-visionOS-simulator.entitlements
+
 ENTITLEMENTS_REQUIRED = $(ENTITLEMENTS_REQUIRED_USE_INTERNAL_SDK_$(USE_INTERNAL_SDK))
 ENTITLEMENTS_REQUIRED_USE_INTERNAL_SDK_ = NO;
 ENTITLEMENTS_REQUIRED_USE_INTERNAL_SDK_NO = NO;
