--- a/Source/WebKit/GPUProcess/GPUProcess.messages.in
+++ b/Source/WebKit/GPUProcess/GPUProcess.messages.in
@@ -98,6 +98,9 @@ messages -> GPUProcess : AuxiliaryProcess {
 #if HAVE(AUDIT_TOKEN)
     SetPresentingApplicationAuditToken(WebCore::ProcessIdentifier processIdentifier, WebCore::PageIdentifier pageIdentifier, std::optional<WebKit::CoreIPCAuditToken> auditToken);
 #endif
+#if PLATFORM(VISION) && ENABLE(MODEL_PROCESS)
+    RequestSharedSimulationConnection(struct WebKit::CoreIPCAuditToken modelProcessAuditToken) -> (std::optional<IPC::SharedFileHandle> sharedSimulationConnection)
+#endif
 }
 
 #endif // ENABLE(GPU_PROCESS)
