Initial thermal state in WebContent is always NSProcessInfoThermalStateNominal https://bugs.webkit.org/show_bug.cgi?id=286651 rdar://143596122
Reviewed by Per Arne Vollan.

The initial thermal state in WebContent is always NSProcessInfoThermalStateNominal. This is because
the thermal state is provided by a notify state token, and we don't seed the initial value of the
state token upon process creation.

Fix this by keeping a map of the current notify state for all tokens and providing this to
WebContent processes when they spawn.

* Source/WebKit/Resources/cocoa/NotificationAllowList/ForwardedNotifications.def:
* Source/WebKit/Shared/WebProcessCreationParameters.h:
* Source/WebKit/Shared/WebProcessCreationParameters.serialization.in:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _getNotifyStateForTesting:completionHandler:]):
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
(WebKit::WebProcessPool::registerNotificationObservers):
(WebKit::WebProcessPool::unregisterNotificationObservers):
(WebKit::WebProcessPool::setNotifyState):
* Source/WebKit/UIProcess/WebProcessPool.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::getNotifyStateForTesting):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/WebProcess/WebProcess.h:
* Source/WebKit/WebProcess/WebProcess.messages.in:
* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):
(WebKit::WebProcess::postNotification):
(WebKit::WebProcess::setNotifyState):
(WebKit::WebProcess::getNotifyStateForTesting):
* Tools/TestWebKitAPI/SourcesCocoa.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewNotificationForwarding.mm: Added.
(getNotifyState):
(TEST(WKWebView, NotifyStateIsInitiallySetAndForwarded)):

Canonical link: https://com

--- a/Source/WebKit/Shared/WebProcessCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/WebProcessCreationParameters.serialization.in
@@ -228,4 +228,8 @@
 
     Seconds memoryFootprintPollIntervalForTesting;
     Vector<size_t> memoryFootprintNotificationThresholds;
+
+#if ENABLE(NOTIFY_BLOCKING)
+    Vector<std::pair<String, uint64_t>> notifyState;
+#endif
 };
